fix menu clipping when previews are missing

--- a/app/assets/stylesheets/src/models.scss
+++ b/app/assets/stylesheets/src/models.scss
@@ -21,7 +21,8 @@ div.form-control.tag-container {
 }
 
 .preview-card {
-  min-height: 100%;
+  min-height: 15em;
+  height: 100%;
   background: none;
 
   .image-preview {
